[tool.poetry]
name = "wynk_parser"
version = "0.1.0"
description = ""
authors = ["Bhanuteja Aryasomayajula <bhanuteja@onequince.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
